--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
+black==21.12b0
 PyGithub==1.55      # utilities for parsing github
 pytest==6.2.5
-matplotlib
-black==21.12b0
+python-dateutil==2.8.2
 requests==2.26.0
